.CICD/k8s/application/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: application
spec: {}
status: {}
