.CICD/k8s/application/nginx.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-ingress

spec:
  ingressClassName: nginx
  rules:
    - host: simple.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: simple-service
                port:
                  number: 5000
